<resources>
    <string name="app_name">Calculator</string>
    <string name="calculate">计算</string>
    <string name="conversion">换算</string>
    <string name="tax">税贷</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="clear">C</string>
    <string name="delete">Del</string>
    <string name="dot">.</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="remainder">%</string>
    <string name="calculation">=</string>
    <string name="more">...</string>
    <string name="calculator_result" />
    <string name="calculator_formula" />

    <string name="scale">缩小</string>
    <string name="settings">设置</string>
    <string name="records" />
</resources>